# Adead-Parallel-UTF

./: Cargo.toml  LICENSE  README.md  ideas.md
benches/: ram_vs_parallel.rs
src/: lib.rs
src/api/: lib.rs
src/core/: cache.rs  index.rs  mod.rs  parallel.rs  resolver.rs  store.rs
src/format/: mod.rs  puf.rs
